welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: not found: value len
  for (i <- 0 to len(nums) -1){
                 ^indexOfValue:3: error: not found: type i
    if (nums[i] == lookingFor){
             ^indexOfValue:3: error: value nums of type Array[Int] does not take type parameters.
    if (nums[i] == lookingFor){
            ^